# celery_django_case

./: .env-example  .gitignore  Dockerfile  SWAGGER_DOCS.md  docker-compose.yml  init.sh  mypy.ini  pyproject.toml
core/: celery.py  settings.py  urls.py
stocks/: models.py  serializers.py  tasks.py  urls.py  views.py
stocks/migrations/: 0001_initial.py
